k8s/backend-peer-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-peer
spec:
  replicas: 6
  selector:
    matchLabels:
      app: backend-peer
  template:
    metadata:
      labels:
        app: backend-peer
    spec:
      containers:
        - name: backend-peer
          image: backend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5050
--- # Service
apiVersion: v1
kind: Service
metadata:
  name: backend-peer
spec:
  selector:
    app: backend-peer
  ports:
    - protocol: TCP
      port: 5050
      targetPort: 5050
  type: ClusterIP
